Changes with version

 *) Add support for python 3.7

 *) Update setup + build system


Changes with version 211.dev1

 *) Update liblinear to version 211

 *) Use twine for uploading

 *) Fix PKG-INFO file


Changes with version 2.1.0.dev2

 *) Add support for Python 3.5 and 3.6. Drop support for Python 3.2 and 3.3.

 *) Upgrade packaging and development boilerplate


Changes with version 2.1.0.dev1

 *) Upgrade to liblinear 2.1


Changes with version 1.96.0.dev4

 *) Added support for mmap'ing loaded models


Changes with version 1.96.0.dev3

 *) fixed linkage error by adding missing extern declarations

 *) Added python 3 support


Changes with version 1.96.0.dev2

 *) Adjusted versioning scheme to PEP 440


Changes with version 1.96.0-dev-r1

 *) First alpha release