@@ -46,9 +46,9 @@ copyright = u'2015 - 2018 Andr\xe9 Malo'
 # built documents.
 #
 # The short X.Y version.
-version = u'211.dev1'
+version = u'220.dev1'
 # The full version, including alpha/beta/rc tags.
-release = u'211.dev1'
+release = u'220.dev1'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
