@@ -7,12 +7,12 @@ Download
     Current Stable Version
     ''''''''''''''''''''''
 
-    - `CHANGES file <http://storage.perlig.de/pyliblinear/CHANGES-211.dev1>`_
-    - `pyliblinear-211.dev1.tar.xz <http://storage.perlig.de/pyliblinear/pyliblinear-211.dev1.tar.xz>`_
-    - `pyliblinear-211.dev1.tar.bz2 <http://storage.perlig.de/pyliblinear/pyliblinear-211.dev1.tar.bz2>`_
-    - `pyliblinear-211.dev1.tar.gz <http://storage.perlig.de/pyliblinear/pyliblinear-211.dev1.tar.gz>`_
-    - `pyliblinear-211.dev1.zip <http://storage.perlig.de/pyliblinear/pyliblinear-211.dev1.zip>`_
-    - `pyliblinear-211.dev1.digests <http://storage.perlig.de/pyliblinear/pyliblinear-211.dev1.digests>`_
+    - `CHANGES file <http://storage.perlig.de/pyliblinear/CHANGES-220.dev1>`_
+    - `pyliblinear-220.dev1.tar.xz <http://storage.perlig.de/pyliblinear/pyliblinear-220.dev1.tar.xz>`_
+    - `pyliblinear-220.dev1.tar.bz2 <http://storage.perlig.de/pyliblinear/pyliblinear-220.dev1.tar.bz2>`_
+    - `pyliblinear-220.dev1.tar.gz <http://storage.perlig.de/pyliblinear/pyliblinear-220.dev1.tar.gz>`_
+    - `pyliblinear-220.dev1.zip <http://storage.perlig.de/pyliblinear/pyliblinear-220.dev1.zip>`_
+    - `pyliblinear-220.dev1.digests <http://storage.perlig.de/pyliblinear/pyliblinear-220.dev1.digests>`_
 
     .. end stable
 
@@ -22,12 +22,12 @@ Download
 Current Development Version
 ---------------------------
 
-- `CHANGES file <http://storage.perlig.de/pyliblinear/dev/CHANGES-211.dev1>`_
-- `pyliblinear-211.dev1.tar.xz <http://storage.perlig.de/pyliblinear/dev/pyliblinear-211.dev1.tar.xz>`_
-- `pyliblinear-211.dev1.tar.bz2 <http://storage.perlig.de/pyliblinear/dev/pyliblinear-211.dev1.tar.bz2>`_
-- `pyliblinear-211.dev1.tar.gz <http://storage.perlig.de/pyliblinear/dev/pyliblinear-211.dev1.tar.gz>`_
-- `pyliblinear-211.dev1.zip <http://storage.perlig.de/pyliblinear/dev/pyliblinear-211.dev1.zip>`_
-- `pyliblinear-211.dev1.digests <http://storage.perlig.de/pyliblinear/dev/pyliblinear-211.dev1.digests>`_
+- `CHANGES file <http://storage.perlig.de/pyliblinear/dev/CHANGES-220.dev1>`_
+- `pyliblinear-220.dev1.tar.xz <http://storage.perlig.de/pyliblinear/dev/pyliblinear-220.dev1.tar.xz>`_
+- `pyliblinear-220.dev1.tar.bz2 <http://storage.perlig.de/pyliblinear/dev/pyliblinear-220.dev1.tar.bz2>`_
+- `pyliblinear-220.dev1.tar.gz <http://storage.perlig.de/pyliblinear/dev/pyliblinear-220.dev1.tar.gz>`_
+- `pyliblinear-220.dev1.zip <http://storage.perlig.de/pyliblinear/dev/pyliblinear-220.dev1.zip>`_
+- `pyliblinear-220.dev1.digests <http://storage.perlig.de/pyliblinear/dev/pyliblinear-220.dev1.digests>`_
 
 .. end dev
 
@@ -37,17 +37,17 @@ Integrity Check
 
 There are hashes (MD5, SHA1 and SHA256) of the download packages stored
 in the `digests file
-<http://storage.perlig.de/pyliblinear/dev/pyliblinear-211.dev1.digests>`_\.
+<http://storage.perlig.de/pyliblinear/dev/pyliblinear-220.dev1.digests>`_\.
 In order to check the integrity of the downloaded file, use a tool like
 md5sum (or sha1sum, sha256sum accordingly), e.g.:
 
 .. sourcecode:: console
 
-    $ md5sum -c pyliblinear-211.dev1.digests
-    pyliblinear-211.dev1.tar.bz2: OK
-    pyliblinear-211.dev1.tar.gz: OK
-    pyliblinear-211.dev1.tar.xz: OK
-    pyliblinear-211.dev1.zip: OK
+    $ md5sum -c pyliblinear-220.dev1.digests
+    pyliblinear-220.dev1.tar.bz2: OK
+    pyliblinear-220.dev1.tar.gz: OK
+    pyliblinear-220.dev1.tar.xz: OK
+    pyliblinear-220.dev1.zip: OK
 
 In order to check the integrity of the digest file itself, you can check
 the PGP signature of that file. The file is signed by André Malo, Key-ID
@@ -55,7 +55,7 @@ the PGP signature of that file. The file is signed by André Malo, Key-ID
 
 .. sourcecode:: console
 
-    $ gpg --verify pyliblinear-211.dev1.digests
+    $ gpg --verify pyliblinear-220.dev1.digests
     gpg: Signature made Sun Oct 22 15:21:37 2017 CEST using DSA key ID 8103A37E
     gpg: Good signature from "Andre Malo <nd@apache.org>"
     gpg:                 aka "Andr\xe9\x20Malo <nd@perlig.de>"
@@ -67,7 +67,7 @@ the PGP signature of that file. The file is signed by André Malo, Key-ID
     ---------------
 
     There's a `Gentoo Linux Ebuild
-    <http://storage.perlig.de/pyliblinear/pyliblinear-211.dev1.ebuild>`_
+    <http://storage.perlig.de/pyliblinear/pyliblinear-220.dev1.ebuild>`_
     available.
 
 
