@@ -28,7 +28,7 @@ pyliblinear - a liblinear python API
 __author__ = u"Andr\xe9 Malo"
 __docformat__ = "restructuredtext en"
 __license__ = "Apache License, Version 2.0"
-__version__ = '211.dev1'
+__version__ = '220.dev1'
 __all__ = ['FeatureMatrix', 'Model', 'Solver', 'SOLVER_TYPES']
 
 from pyliblinear._liblinear import FeatureMatrix  # noqa
