@@ -1,5 +1,5 @@
 
-Copyright (c) 2007-2015 The LIBLINEAR Project.
+Copyright (c) 2007-2017 The LIBLINEAR Project.
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
